<resources>
    <string name="app_name">穿穿</string>
    <string name="versionCode">69</string>
    <string name="versionName">4.0.8</string>
    <!-- 界面文字配置 -->
    <string name="TextAppName">穿穿</string>
    <string name="TextAppCodeName">CC</string>
    <string name="TextHome">穿穿</string>
    <string name="TextFriends">客服</string>
    <string name="TextPublish">发图</string>
    <string name="TextDiscovery">发现</string>
    <string name="TextMine">我的</string>
    <string name="TextScan">扫一扫</string>
    <string name="TextMessage">消息</string>
    <string name="TextSearchKey">马蓉同款</string>
    <string name="TextLauchSkip">穿穿</string>
    <string name="TextScanTile">二维码扫描</string>
    <string name="TextScanBottom">请对准二维码进行扫描</string>
    <string name="TextScanTorch">闪光灯</string>
    <string name="TextLargeIcon">发图询价</string>
    <string name="TextSend">发送</string>
    <string name="MyShaitu">我的晒图</string>
    <string name="TextUserLogin">用户登录</string>
    <string name="TextLogin">登录</string>
    <string name="TextPostPic">发布</string>
    <string name="TextTop">上装</string>
    <string name="TextBottom">下装</string>
    <string name="TextSuite">套装</string>
    <string name="TextBasicInfo">基本资料</string>

    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="forget_password">忘记密码</string>
    <string name="swipe_to_refresh">下拉刷新</string>
    <!-- 云信SDK所需文案 -->
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>

    <!-- 提示信息 -->
    <string name="MessageAlertCancel">我知道了</string>
    <string name="MessageConfirmCancel">取消</string>
    <string name="MessageConfirmAccept">确定</string>
    <string name="MessagePromptCancel">取消</string>
    <string name="MessagePromptAccept">确定</string>
    <string name="MessageUploadCancel">取消</string>
    <string name="MessageUploadAccept">确定</string>
    <string name="MessageLoginAuth">亲，您还没有登录哦！</string>
    <string name="empty">亲，您还没有登录哦！</string>
    <string name="MessageLoginAuthAccept">立即登录</string>
    <string name="MessageLoginAuthCancel">取消</string>
    <string name="MessageIMBusy">系统繁忙</string>
    <string name="MessageNetworkError">网络连接异常，请检查网络连接！</string>
    <string name="MessageServiceError">服务器异常，点击重试！</string>
    <string name="MessageServerDisconn">与服务器断开连接</string>
    <string name="MessageNetworkRetry">重试</string>
    <string name="MessageVersionObsolete">当前版本已停止使用，发现新版</string>
    <string name="MessageVersionNew">发现新版本</string>
    <string name="MessageLogout">确认退出登录账号？</string>
    <string name="MessageLogoutAccept">退出</string>
    <string name="MessageUpdating">正在完成更新</string>
    <string name="MessageNewMessage">＞ 您有新的消息，请点击查收！</string>
    <string name="MessageVibrate">消息震动提示</string>
    <string name="MessageSound">消息声音提示</string>
    <string name="MessagePostHint">请上传清晰、完整图片</string>
    <string name="MessageDefaultType">未选择类别则默认为上装</string>

    <!-- Icon图标 -->
    <string name="IconHome">chuanchuan.png</string>
    <string name="IconHomeActive">chuanchuan_press.png</string>
    <string name="IconFriends">friends.png</string>
    <string name="IconFriendsActive">friends_press.png</string>
    <string name="IconDiscovery">find.png</string>
    <string name="IconDiscoveryActive">find_press.png</string>
    <string name="IconMine">mine.png</string>
    <string name="IconMineActive">mine_press.png</string>
    <string name="IconPublish">camera.png</string>
    <string name="IconScan">scanning.png</string>
    <string name="IconMessage">message.png</string>
    <string name="IconLogo">icon.png</string>
    <string name="IconBack">back.png</string>
    <string name="IconSearch">search.png</string>

    <!--友盟分享所需-->

    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_openshare_custom">打开自定义分享面板</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>

    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>

    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>

    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>

    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>

    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>

    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="perm">需要权限:</string>
    <string name="umeng_self_check">自检工具</string>
    <string name="getcode">点击获取验证码</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="we_chat">微信支付结果：%s</string>

</resources>
